# DuqanVision

./: DEPLOYMENT_GUIDE.md  README.md  deploy-render.sh  fix_paths.py  package-lock.json  package.json  pyproject.toml  rag_api.py  render.yaml  requirements-render.txt  requirements.txt  router_service.py  semantic_service.py  smart_service.py
Front-End-new/admin/: branches.css  branches.html  inventory.css  operations2.css  operations2.html  operations2.js  tickets.css  tickets.js
Front-End-new/css/: account.css  base.css  complaint.css  landing.css  qr.css  user.css
Front-End-new/js/: invoice-view.js  invoices-management.js  qr.js  support.js  user.js
Front-End-new/pages/: index.html  (+4 more)
Platform/: account.css  account.html  account.js  admin.js  auth.css  auth.html  auth.js  branches.html  branches.js  business.html  complaint.html  dashboard.css  dashboard.html  dashboard.js  debug-category.html  index.html  index.js  inventory.html  inventory.js  invoice-view.html  invoice.html  invoices-management.html  login.html  operations.html  operations.js  operations2.html  qr.html  signup.html  support.css  support.html  tickets.html  tickets.js  user.html
Rag_system/: Message_Flow_Diagram.md  Message_Flow_Explanation.md  README.md  __init__.py  config.py  db_service.py  rag_service.py  rag_system_refactored.py  semantic_service.py  smart_service.py
Track-Model-with-QR/: Full-Snapshot-approach.py  FullForDemo.py  api.py  session_tester.py  simpleqr.py
refactored_rag_system/: config.py  rag_service.py  rag_system_refactored.py  router_service.py  semantic_service.py
(+54 files in other folders)
