[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duqanvision"
version = "1.0.0"
description = "Smart Retail Management System with AI-powered features"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "python-dotenv==1.0.1",
    "openai==1.3.7",
    "langchain==0.0.350",
    "langchain-openai==0.0.2",
    "langchain-community==0.0.10",
    "tiktoken==0.5.2",
    "httpx==0.25.2",
    "requests==2.31.0",
    "aiohttp==3.8.6",
    "supabase==2.4.0",
    "postgrest==1.1.1",
    "pandas==1.5.3",
    "numpy==1.24.3",
    "rich==13.6.0",
    "click==8.1.7",
]

[tool.setuptools]
packages = ["Rag_system"]
